AWS/Class-Notes/Week12-Tuesday/2. Public Subnets (3 AZs).tf

## 2. Public Subnets — Expose ALB and (for this lab) ASG instances
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.100.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags = { Name = "ck-public-a" }
}

resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.100.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
  tags = { Name = "ck-public-b" }
}

resource "aws_subnet" "public_c" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.100.3.0/24"
  availability_zone       = "us-east-1c"
  map_public_ip_on_launch = true
  tags = { Name = "ck-public-c" }
}
